--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,14 +6,10 @@ jobs:
   build-release:
     name: Build Release
     runs-on: ubuntu-latest
-    if: contains(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -27,4 +23,4 @@ jobs:
           context: .
           tags: |
             ghcr.io/strideynet/noughts-crosses-grpc-rust/server:latest
-            ghcr.io/strideynet/noughts-crosses-grpc-rust/server:${{ steps.get_version.outputs.VERSION }}
+            ghcr.io/strideynet/noughts-crosses-grpc-rust/server:${{ github.sha }}
