--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,14 @@ tonic = "0.9"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 clap = { version = "4.2.7", features = ["derive"] }
-log = { version = "0.4.17", features = ["kv_unstable"] }
-env_logger = "0.10.0"
+jsonwebtoken = "8"
+serde = {version = "1.0", features = ["derive"] }
+uuid = {version = "1.3.2", features = ["v4"]}
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+tracing-opentelemetry = "0.18.0"
+opentelemetry = "0.19.0"
+serde_json = "1.0.96"
 
 [build-dependencies]
 tonic-build = "0.9"
